--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,6 +9,7 @@
   z-index: 10;
   font-family: 'Joti One', serif;
   transition: background-color 0.3s ease;
+  position: fixed;
 }
 
 .navbar-container {
@@ -18,6 +19,7 @@
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 1rem;
+  overflow: hidden;
 }
 
 .logo-link {
@@ -53,6 +55,7 @@
 
 .mobile-menu {
   display: none;
+  overflow: hidden;
 }
 
 .mobile-menu-button {
@@ -62,6 +65,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 .mobile-menu-button.open svg {
@@ -83,12 +87,14 @@
     pointer-events: none; /* Default to disable pointer events */
     padding: 10px 0;
     color: white;
+    overflow: hidden;
   }
 
   .nav-links.open {
     display: flex; /* Show menu when .open class is applied */
     opacity: 1;
     pointer-events: auto;
+    background: rgba(14, 23, 39, 0.9);
   }
 
   .nav-links li {
